# pyhoo

./: .gitignore  .isort.cfg  .travis.yml  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  setup.cfg
config/: fundamentals_config.json  sp500_tickers.txt
pyhoo/: __init__.py  config.py  errors.py  getter.py  requester.py
pyhoo/models/: abc.py  chart.py  fundamentals.py  iterables.py  options.py
pyhoo/parsers/: __init__.py  abc.py  chart.py  fundamentals.py  options.py
pyhoo/types/: __init__.py  chart.py
pynance/: __init__.py  config.py  getter.py  requester.py
pynance/data/: fundamentals_type_options.txt
pynance/fundamentals/: getter.py  requester.py
pynance/models/: abc.py  chart.py  fundamentals.py  iterables.py  options.py  stock.py
pynance/options/: getter.py  requester.py
pynance/parsers/: abc.py  chart.py  fundamentals.py  options.py
pynance/stock/: getter.py  requester.py
pynance/types/: __init__.py  chart.py  fundamentals.py  options.py  stock.py
src/: config.py
src/fundamentals/: getter.py  requester.py
src/models/: fundamentals.py
test/end_to_end/: test_get.py
test/mock/: session.py
test/unit/: test_getter.py  test_requester.py
test/unit/fundamentals/: test_getter.py  test_requester.py
test/unit/options/: test_getter.py  test_requester.py
test/unit/responses/: stock.json
test/unit/stock/: test_getter.py  test_requester.py
tests/end_to_end/: test_get.py
tests/end_to_end/inputs/: chart_hourly.json  (+2 more)
tests/mock/: session.py
tests/unit/: test_getter.py  test_param_config.py  test_requester.py
(+5 files in other folders)
