[tool.poetry]
name = "pyhoo"
version = "0.1.3"
description = "Yet another unofficial Yahoo Finance API, but with concurrent requests"
authors = ["ROUHARD Pierre <pierrerouhard@gmail.com>"]
license = "MIT"
keywords = ["yahoo", "finance", "api"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3.6.1"
pandas = "^1.0.0"
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
aiohttp = "^3.7.2"
black = "^20.8b1"
codecov = "^2.1.10"
coverage = "^5.3"
flake8 = "^3.8.4"
isort = "^5.6.3"
mypy = "^0.790"
pandas = "^1.1.2"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
